20180728-明天放假喽

--- a/package.json
+++ b/package.json
@@ -116,6 +116,10 @@
     "/api": {
       "target": "https://www.skypixel.com",
       "changeOrigin": true
+    },
+    "/photos": {
+      "target": "https://www.skypixel.com",
+      "changeOrigin": true
     }
   }
 }
